--- a/source/quickstart.html.md.erb
+++ b/source/quickstart.html.md.erb
@@ -9,7 +9,7 @@ review_in: 6 months
 
 # Quick start 
 
-In this guide, you'll create an example service using either a local copy of the GOV.UK One Login simulator or the GOV.UK One Login integration environment. You'll be able to see the response from the `/.well-known/openid-configuration`, `/.well-known/jwks.json`, `/.well-known/did.json`, `/trustmark`, `/authorize`.  `/userinfo`, `/token`, and `/logout` endpoints and test authentication-only or authentication and identity journeys. Using this page is optional but could be helpful to see how a typical integration with GOV.UK One Login works. 
+In this guide, you'll create an example service using either a local copy of the [GOV.UK One Login simulator](https://github.com/govuk-one-login/simulator) or the [GOV.UK One Login integration environment](https://docs.sign-in.service.gov.uk/before-integrating/register-and-manage-your-service/). You'll be able to see the response from the `/.well-known/openid-configuration`, `/.well-known/jwks.json`, `/.well-known/did.json`, `/trustmark`, `/authorize`.  `/userinfo`, `/token`, and `/logout` endpoints and test authentication-only or authentication and identity journeys. Using this page is optional but could be helpful to see how a typical integration with GOV.UK One Login works. 
 
 During this quick start, you can: 
 
