--- a/source/quickstart-v1.html.md.erb
+++ b/source/quickstart-v1.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Quickstart
+title: Quickstart v1
 weight: 110
 last_reviewed_on: 2024-12-10
 review_in: 6 months
@@ -7,7 +7,7 @@ review_in: 6 months
 
 <!-- https://govukverify.atlassian.net/browse/AP-358 -->
 
-# Quick start 
+# Quick start v1  
 
 In this guide, you'll create an example service using either a local copy of the [GOV.UK One Login simulator](https://github.com/govuk-one-login/simulator) or the [GOV.UK One Login integration environment](https://docs.sign-in.service.gov.uk/before-integrating/register-and-manage-your-service/). You'll be able to see the response from the `/.well-known/openid-configuration`, `/.well-known/jwks.json`, `/.well-known/did.json`, `/trustmark`, `/authorize`.  `/userinfo`, `/token`, and `/logout` endpoints and test authentication-only or authentication and identity journeys. Using this page is optional but could be helpful to see how a typical integration with GOV.UK One Login works. 
 
