--- a/source/experiments.html.md.erb
+++ b/source/experiments.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Experiments
-weight: 1
+weight: 109
 last_reviewed_on: 2024-12-10
 review_in: 2 months
 ---
@@ -31,15 +31,22 @@ Middleman is extended with the [Tech Docs Template](https://github.com/alphagov/
 
 The Tech Docs Template uses the [GOV.UK Design System](https://design-system.service.gov.uk/)
 
+
 ## 4. GOV.UK Frontend
 
 ## 5. Markdown 
 
 ## 6. HTML
 
+<div style="display: inline-block; width: 30px; height: 30px; border-radius: 50%; background-color: #000; color: #fff; text-align: center; line-height: 30px; font-size: 16px; font-weight: bold;">1</div>
+
+<div style="display: inline-block; width: 30px; height: 30px; border-radius: 50%; background-color: #000; color: #fff; text-align: center; line-height: 30px; font-size: 16px; font-weight: bold;">2</div>
+
+<div style="display: inline-block; width: 30px; height: 30px; border-radius: 50%; background-color: #000; color: #fff; text-align: center; line-height: 30px; font-size: 16px; font-weight: bold;">3</div>
+
 ## 7. CSS
 
-## 8. Javascropt
+## 8. Javascript
 
 ## 9. Docker
 
